# app/model/auth.go
@@ -1,0 +1,21 @@
+package model
+
+type RegisterRequest struct {
+	Username  string `json:"username" binding:"required"`
+	Email     string `json:"email" binding:"required"`
+	Password  string `json:"password" binding:"required"`
+	FullName  string `json:"full_name" binding:"required"`
+}
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type RefreshTokenRequest struct {
+	Token string `json:"token" binding:"required"`
+}
+
+type LogoutRequest struct {
+	Token string `json:"token" binding:"required"`
+}
